# ida-mmcp

./: README.md  pyproject.toml
src/ida_mmcp/: server.py  server_generated.py
